tests/negative/test_import_cycle.orb
import "negative/_cycle_back.orb";

fnc main() () {};